--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,33 @@
 		<jdk.target.version>1.8</jdk.target.version>
 		<hutool.version>4.5.7</hutool.version>
 		<lombok.version>1.18.6</lombok.version>
+		<chartset.UTF8>UTF-8</chartset.UTF8>
 	</properties>
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<scm>
+		<tag>master</tag>
+		<url>git@gitee.com:siryuxuan/ehi-weixin.git</url>
+		<connection>scm:git:git@gitee.com:siryuxuan/ehi-weixin.git</connection>
+		<developerConnection>scm:git:git@gitee.com:siryuxuan/ehi-weixin.git</developerConnection>
+	</scm>
+	<developers>
+		<developer>
+			<name>yuxuan</name>
+			<email>yuxuanlt@qq.com</email>
+			<organization>yuxuan</organization>
+		</developer>
+	</developers>
 	<dependencies>
 		<!-- hutool utils -->
 		<dependency>
@@ -20,7 +46,7 @@
 			<version>${hutool.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<!-- lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -30,22 +56,33 @@
 		</dependency>
 
 	</dependencies>
-	<distributionManagement>
-		<repository>
-			<id>releases</id>
-			<name>User Project Release</name>
-			<url>http://192.168.0.125:8081/repository/maven-releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<name>User Project SNAPSHOTS</name>
-			<url>http://192.168.0.125:8081/repository/maven-snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
 
 	<build>
 		<finalName>ehiWeixin</finalName>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10.4</version>
+				<configuration>
+					<encoding>${chartset.UTF8}</encoding>
+					<aggregate>true</aggregate>
+					<charset>${chartset.UTF8}</charset>
+					<docencoding>${chartset.UTF8}</docencoding>
+				</configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<configuration>
+							<additionalparam>-Xdoclint:none</additionalparam>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
