--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,11 @@
 		<lombok.version>1.18.6</lombok.version>
 		<chartset.UTF8>UTF-8</chartset.UTF8>
 	</properties>
-	
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
